assets/css/components/_modals.scss
//
// Bootstrap Modals
// --------------------------------------------------

// .modal-open      - body class for killing the scroll
// .modal           - container to scroll within
// .modal-dialog    - positioning shell for the actual modal
// .modal-content   - actual modal w/ bg and corners and shit

// Container that the modal scrolls within
.modal {
  display: none;
  overflow: hidden;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: $zindex-modal;
  -webkit-overflow-scrolling: touch;
  outline: 0;
  &.fade .modal-dialog {
    transform: scale(.8);
    transition: transform 0.15s linear;
  }
  &.in .modal-dialog { transform: scale(1) }
}

// Shell div to position the modal with bottom padding
.modal-dialog {
  position: relative;
  width: auto;
  margin: 10px;
}

// Actual modal
.modal-content {
  position: relative;
  background-color: $modal-content-bg;
  border: 1px solid $modal-content-fallback-border-color; //old browsers fallback (ie8 etc)
  border: 1px solid $modal-content-border-color;
  border-radius: $border-radius-large;
  @include box-shadow(0 3px 9px rgba(0,0,0,.5));
  background-clip: padding-box;
  outline: 0;
}
// Modal background
.modal-backdrop {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: $zindex-modal-background;
  background-color: $modal-backdrop-bg;
  // Fade for backdrop
  &.fade { @include opacity(0); }
  &.in { @include opacity($modal-backdrop-opacity); }
}

// Modal header
// Top section of the modal w/ title and dismiss
.modal-header {
  padding: $modal-title-padding;
  border-bottom: 1px solid $modal-header-border-color;
  min-height: ($modal-title-padding + $modal-title-line-height);
}
// Close icon
.modal-header .close {
  margin-top: -2px;
}

// Title text within header
.modal-title {
  margin: 0;
  line-height: $modal-title-line-height;
}

// Modal body
// Where all modal content resides (sibling of .modal-header and .modal-footer)
.modal-body {
  position: relative;
  padding: $modal-inner-padding;
}

// Footer (for actions)
.modal-footer {
  padding: $modal-inner-padding;
  text-align: right; // right align buttons
  border-top: 1px solid $modal-footer-border-color;
  @include clearfix; // clear it in case folks use .pull-* classes on buttons

  // Properly space out buttons
  .btn + .btn {
    margin-left: 5px;
    margin-bottom: 0; // account for input[type="submit"] which gets the bottom margin like all other inputs
  }
  // but override that for button groups
  .btn-group .btn + .btn {
    margin-left: -1px;
  }
  // and override it for block buttons as well
  .btn-block + .btn-block {
    margin-left: 0;
  }
  &:after, &:before {
    content: none;
  }
}

// Measure scrollbar width for padding body during modal show/hide
.modal-scrollbar-measure {
  position: absolute;
  top: -9999px;
  width: 50px;
  height: 50px;
  overflow: scroll;
}

// Scale up the modal
@media (min-width: $screen-sm-min) {
  // Automatically set modal's width for larger viewports
  .modal-dialog {
    width: $modal-md;
    margin: 30px 0;
  }
  .modal-content {
    @include box-shadow(0 5px 15px rgba(0,0,0,.5));
  }

  // Modal sizes
  .modal-sm { width: $modal-sm; }
}

@media (min-width: $screen-md-min) {
  .modal-lg { width: $modal-lg; }
}

//
// Blockchain Modal Overrides
// --------------------------------------------------
.bc-modal {
  display: flex !important;
  justify-content: center;
  align-items: center;
  .modal-content { background: $light-blue; }
  .modal-dialog { width: 50vw; margin: 0 !important }
  &.small { .modal-dialog { width: 40vw; } }
  .modal-body {
    background: white;
    min-height: 100px;
  }
  .modal-footer { border-top: 1px solid #e5e5e5; }
  .bc-modal-header {
    position: relative;
    h3 {
      font-weight: 500;
      font-size: 2em;
      margin-top: 10px;
    }
    h5 {
      font-weight: 300;
      color: darken($ccc, 30%);
      margin: 5px 0;
    }
    img {
      margin-right: 10px;
      height: 40px;
    }
    .step {
      position: absolute;
      top: 8px;
      right: 0;
      font-size: 11px;
      padding-right: 14px;
    }
  }
  input[type="checkbox"] {
    margin: 0;
  }
  .form-group { margin-bottom: 10px; }
  .form-control {
    border: none;
    box-shadow: none;
    border-radius: 0;
    border-bottom: 1px solid $ccc;
    &:focus {
      border-color: none;
      box-shadow: none
    }
    &.no-border { border-bottom: none; }
  }
  .has-error .border-bottom { border-color: #a94442 !important; }
  label {
    font-weight: 400;
    color: darken($ccc, 45%);
    font-size: 1.2em;
  }
  .total-amounts {
    width: 50%;
    display: flex;
    flex-direction: column;
    td { padding: 2px 4px 2px 0px; }
  }
  .fa-arrows-h {
    color: $ccc;
    padding: 0px 10px;
  }

  ul {
    list-style-type: none;
    padding: 0;
  }

  .label {
    color: $blue;
    margin-bottom: 15px;
    font-size: 14px;
    font-weight: 400;
  }

  .usd-amount, .btc-amount {
    border-bottom: 1px solid $ccc;
    display: flex;
    align-items: center;
    justify-content: flex-start;
  }
  .amount-field {
    display: flex;
    align-items: center;
    justify-content: space-between;
    label {
      margin-right: 10px;
    }
  }
  .send-by {
    list-style-type: none;
    position: absolute;
    top: 0px;
    right: 25px;
    li {
      display: inline-block;
      margin: 0 10px;
      color: $ccc;
      &.active {
        color: $blue;
        font-weight: 700;
      }
      &:hover {
        text-decoration: underline;
        cursor: pointer;
      }
    }
  }
  .hide { display: none !important; }
  .hidden { opacity: 0; }
  .to-field, .public-note {
    position: relative;
    label {
      margin-bottom: 15px;
    }
  }
  .btc, .email, .phone {
    display: flex;
    flex-direction: column;
  }
  .qr-code {
    height: 20px;
    width: 20px;
    position: absolute;
    right: 33px;
    top: 50px;
    background: #fdfdfd;
    border:1px solid #e5e5e5;
    padding:5px;
    &:hover {
      cursor: pointer;
      background: #efefef;
    }
  }
  .conversion {
    border-bottom: 1px solid $eee;
    padding-bottom: 5px;
  }
  input[type=number]::-webkit-inner-spin-button,
  input[type=number]::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
  }
  ::-webkit-input-placeholder {
    color: $ccc;
  }
  .advanced-recipient-row {
    margin-bottom: 10px;
    position: relative;
    border: 1px solid #eee;
    padding: 1em;
    .ui-select-container {
      min-width: 225px;
      margin-right: 10px;
    }
  }
  .recipient-currency {
    .form-control {
      padding: 3px 10px;
    }
  }
  //Specific to the 2FA modal
  .two-fa-image { width: 40px; }
  .phone-image { width: 85px; }
  .ti-lock { font-size: 7.5em; color: #C6C6C6; }

  //Specific to the first login modal
  .rocket-gif {
    border-radius: 5px;
    width: 228px;
    height: 430px;
  }
  .advanced-send-scroll { max-height: 400px; overflow-y: scroll; }

  [name='sendForm'], [name='requestForm']  {
    label { text-align: right; }
  }
}

.rocket-modal {
  background: rgba(10,10,10,.4);
  .modal-body { padding: 3em; }
  .rocket-text {
    padding-right: 3em;
    p { line-height: 1.5; }
  }
}

.terms-modal {
  .modal-body {
    max-height: 400px;
    overflow-y: scroll;
    padding: 0;
  }
  .modal-dialog { width: 65vw; }
}

@media (max-width: 768px) {
  .bc-modal, .bc-modal.small {
    .modal-dialog {
      width: 95%; /* fallback for browsers without support for vw */
      width: 95vw;
      margin: 5vw 2vw;
    }
    .total-amounts { width: 100%; }
    [name='sendForm'], [name='requestForm']  {
      label { text-align: left; }
    }
  }
  .rocket-modal {
    .modal-body { padding: 1em; }
    .rocket-gif { height: 325px; }
    .rocket-text {
      padding-right: 1em;
      p { font-size: 12px; }
      h3 { font-size: 18px; }
      .button-success { font-size: 12px; padding: .5em; }
    }
  }
}
@media (min-width: 769px) and (max-width: 992px) {
  .bc-modal, .bc-modal.small {
    .modal-dialog {
      width: 60vw;
    }
  }
}

